--- a/app/src/main/res/layout/last_fifteen_day.xml
+++ b/app/src/main/res/layout/last_fifteen_day.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="deakin.gopher.guardian.view.general.PatientListActivity">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -559,3 +569,8 @@
         app:srcCompat="@drawable/rectangle3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<include
+android:id="@id/nav_view"
+layout="@layout/navigation_view" />
+    </androidx.drawerlayout.widget.DrawerLayout>
