--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="393dp"
+    android:layout_width="match_parent"
     android:layout_height="851dp"
     android:textAlignment="center">
-
-    <!--test-->
 
 
     <androidx.cardview.widget.CardView
@@ -17,7 +15,7 @@
         app:cardBackgroundColor="@color/TG_blue"
         app:cardCornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -25,16 +23,16 @@
             android:id="@+id/imageView8"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginLeft="140dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="135dp"
             android:contentDescription="TODO"
             app:srcCompat="@drawable/profile_avatar_women" />
 
         <TextView
             android:id="@+id/username"
-            android:layout_width="99dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="160dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="250dp"
             android:fontFamily="sans-serif-medium"
             android:text=""
@@ -46,10 +44,10 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="106dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="100dp"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/patient_daily_report"
+            android:text="Patient Daily Report"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
@@ -70,9 +68,9 @@
         android:id="@+id/imageView11"
         android:layout_width="43dp"
         android:layout_height="47dp"
-        android:layout_marginStart="180dp"
         android:layout_marginTop="35dp"
         android:contentDescription="TODO"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gopher_logo" />
@@ -96,7 +94,7 @@
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-black"
-                android:text="@string/reported_by"
+                android:text="Reported By"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +121,7 @@
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif-black"
-                android:text="@string/report_date"
+                android:text="Report date"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +136,7 @@
                 android:layout_marginEnd="32dp"
                 android:backgroundTint="@color/TG_blue"
                 android:fontFamily="@font/poppins_bold"
-                android:text="@string/today"
+                android:text="today"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/white"
                 android:textSize="8sp"
@@ -191,7 +189,7 @@
                 android:layout_marginTop="164dp"
                 android:layout_marginBottom="111dp"
                 android:fontFamily="sans-serif-black"
-                android:text="@string/progress_notes"
+                android:text="Progress Notes"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -208,7 +206,7 @@
                 android:background="@drawable/rectangle"
                 android:gravity="left"
                 android:inputType="text"
-                android:text="@string/patient_normal_daily_visit"
+                android:text="Patient normal, daily visit..."
                 android:textColor="@color/black_overlay"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -221,7 +219,7 @@
                 android:layout_marginStart="6dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="sans-serif-black"
-                android:text="@string/alert_word"
+                android:text="Alert"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/urgentMedicalAttentionTextView"
@@ -237,7 +235,7 @@
                 android:gravity="center"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="@string/urgent_medical_attention"
+                android:text="Urgent Medical Attention    "
                 android:textColor="#595656"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -269,7 +267,7 @@
                 android:gravity="center"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="@string/requires_hospitalisation"
+                android:text="Requires Hospitalisation     "
                 android:textColor="#595656"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -299,7 +297,7 @@
                 android:gravity="center"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="@string/not_applicable"
+                android:text="Not Applicable                       "
                 android:textColor="#595656"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -333,7 +331,7 @@
                 android:gravity="center"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="@string/requires_hourly_attention"
+                android:text="Requires hourly attention    "
                 android:textColor="#595656"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -367,7 +365,7 @@
                 android:layout_marginBottom="40dp"
                 android:backgroundTint="@color/TG_blue"
                 android:fontFamily="@font/poppins_bold"
-                android:text="@string/submit_caps"
+                android:text="SUBMIT"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:cornerRadius="24dp"
