--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -47,7 +47,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="100dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Patient Daily Report"
+            android:text="@string/patient_daily_report"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
@@ -94,7 +94,7 @@
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-black"
-                android:text="Reported By"
+                android:text="@string/reported_by"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif-black"
-                android:text="Report date"
+                android:text="@string/report_date"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +136,7 @@
                 android:layout_marginEnd="32dp"
                 android:backgroundTint="@color/TG_blue"
                 android:fontFamily="@font/poppins_bold"
-                android:text="today"
+                android:text="@string/today"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/white"
                 android:textSize="8sp"
@@ -189,7 +189,7 @@
                 android:layout_marginTop="164dp"
                 android:layout_marginBottom="111dp"
                 android:fontFamily="sans-serif-black"
-                android:text="Progress Notes"
+                android:text="@string/progress_notes"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -206,7 +206,7 @@
                 android:background="@drawable/rectangle"
                 android:gravity="left"
                 android:inputType="text"
-                android:text="Patient normal, daily visit..."
+                android:text="@string/patient_normal_daily_visit"
                 android:textColor="@color/black_overlay"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -219,7 +219,7 @@
                 android:layout_marginStart="6dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="sans-serif-black"
-                android:text="Alert"
+                android:text="@string/alert_word"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/urgentMedicalAttentionTextView"
@@ -235,7 +235,7 @@
                 android:gravity="center"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="Urgent Medical Attention    "
+                android:text="@string/urgent_medical_attention"
                 android:textColor="#595656"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -267,7 +267,7 @@
                 android:gravity="center"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="Requires Hospitalisation     "
+                android:text="@string/requires_hospitalisation"
                 android:textColor="#595656"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -297,7 +297,7 @@
                 android:gravity="center"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="Not Applicable                       "
+                android:text="@string/not_applicable"
                 android:textColor="#595656"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -331,7 +331,7 @@
                 android:gravity="center"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="Requires hourly attention    "
+                android:text="@string/requires_hourly_attention"
                 android:textColor="#595656"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -365,7 +365,7 @@
                 android:layout_marginBottom="40dp"
                 android:backgroundTint="@color/TG_blue"
                 android:fontFamily="@font/poppins_bold"
-                android:text="SUBMIT"
+                android:text="@string/submit_caps"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:cornerRadius="24dp"
