--- a/app/src/main/res/layout/activity_patient_list.xml
+++ b/app/src/main/res/layout/activity_patient_list.xml
@@ -66,7 +66,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/patient_list_company_icon" />
 
-    <SearchView
+
+        <Button
+            android:id="@+id/button_view_archived"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Archive"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/button_round"
+            android:textColor="#FFFFFF"/>
+
+
+
+        <SearchView
             android:id="@+id/patient_list_searchView"
             android:layout_width="375dp"
             android:layout_height="64dp"
